fixed task white space

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -37,10 +37,13 @@ button, a:hover {
     cursor: pointer;
 }
 
-button, input {
+button {
     outline: none;
     border: none;
 }
+
+
+
 
 p {
     max-width: 48ch;
